--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script src='iframeResizer.contentWindow.min.js'></script>
+    <script src="iframeResizer.contentWindow.min.js"></script>
     <!-- Links -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <!-- Meta -->
-    <title>Goose Finance</title>
+    <title>Tissue Finance</title>
     <meta
       name="description"
-      content="Flip EGG, and stake them with Goose Finance, the best decentralized exchange on Binance Smart Chain.y"
+      content="Roll a TISSUE, and stake them with Tissue Finance, the best decentralized exchange on Binance Smart Chain.y"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
@@ -22,7 +22,10 @@
     <meta name="twitter:image" content="https://goosedefi.com/images/egg/hero.png" />
     <meta name="twitter:description" content="Farm the native coin of Goose Finance with Goose Finance FLP Token" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🥚 Goose Finance - A next evolution DeFi exchange on Binance Smart Chan (BSC)" />
+    <meta
+      name="twitter:title"
+      content="🧻 Tissue Finance - A next evolution DeFi exchange on Binance Smart Chan (BSC)"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
